--- a/css/style.css
+++ b/css/style.css
@@ -1,148 +1,119 @@
+:root{
+
+    /* Theme variables */
+    --colourPri: #022140;
+    --colourSec: #c5c5c5;
+    --colourBG: #14BCFF;
+    --colourText: #f0f0f0;
+    --colourNav: #c68c53a8;
+    --colourHover: #233385;
+}
+
+hr {
+  border-top: 3px solid var(--colourHover);
+
+}
+
 .heading {
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 2.5rem;
+    text-align: center;
 }
 
-.background {
-    background-color: rgb(197, 197, 197);
-    padding-left: 2%;
-    padding-right: 2%;
+.divider {
+  margin-bottom: 15%;
 }
 
-.time {
-    font-size: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: right;
-    float: right;
+#logo {
+    float: left;
 }
 
-.body {
-    font-family: "Arial", "Helvetica", sans-serif;
-}
-
-
-/* create a new selector with the name top-header */
-
-#top-header {
-    font-size: 4em;
-}
-
-
-/* create a new selector with the name bottom-footer just as you did for the header */
-
-#bottom-footer {
-    border-style: ridge;
-    padding: 5px;
-}
-
-
-/* The font weight for h1, h2, and h3 tags should all be set to lighter and with a letter spacing of 1 pixel */
-
-h1,
-h2,
-h3 {
+#calorie, #loginHeader {
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    padding-bottom: 1.5em;
+    font-size: 1em;
     font-weight: bold;
-    letter-spacing: 1px;
+    text-align: center;
+    color: var(--colourText);
+    background-color: var(--colourBG);
 }
 
-
-/* Set the alignment of text in <p> tags to justified and the line height to 1.3 */
-
-p {
-    text-align: justify;
-    line-height: 1.3;
+.title {
+    font-size: 1.3em;
+    text-align: left;
+    padding-top: .5em;
 }
 
+#home {
+    padding-top: 1em;
+}
+
+#homeToggle, #supportToggle {
+  font-size: 5em;
+  padding-right: 20px;
+}
+#homeToggle {
+  text-align: right;
+}
+#supportToggle {
+  text-align: center;
+}
 
 /* change the styling of the <hr> tags to make them look a bit more interesting and in-keeping with the aesthetic of the site */
 
-hr {
-    height: 7px;
-    border: 2px solid rgb(0, 0, 0);
-    border-radius: 2px;
+
+#UserNav {
+    display:inline-block !important;
+    float: none;
+    position: fixed;
+    top: 93%;
+    height: 7%;
+    width: 100%;
+    background-color: var(--colourBG);
 }
 
-
-/* create a new selector with the name table-main  */
-
-.table-main,
-.table-main th,
-.table-main td {
-    border: 1px solid rgb(0, 0, 0);
+label {
+  font-size: 1.2em;
+  font-weight: bolder;
 }
 
-
-/* table header row only */
-
-.table-main th {
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-    padding: 10px;
+input {
+  height: calc(1.6em + .6vw);
 }
 
-
-/* table cells only */
-
-.table-main td {
-    background-color: rgb(214, 214, 214);
-    padding: 5px;
+.nav>li>a {
+    padding: 1px;
 }
 
-
-/* table caption only */
-
-.table-main caption {
-    font-style: italic;
-    color: rgb(0, 0, 0);
+.progressDonut{
+  --percentage: 0;
+  margin-top: 1em;
+  width: 300px;
+  height: 150px;
+  color: var(--colourBG);
+  font-size: 1.2em;
+  font-weight: 600;
+  overflow: hidden;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  box-sizing: border-box;
 }
-
-
-/* create a new style with a background colour #615fa0 and font colour lightgrey */
-
-.customForm {
-    background-color: #615fa0;
-    color: lightgrey;
-    padding: 2px;
-}
-
-
-/* apply only to <input> and have a background colour of lightgrey and padding of 2 pixels */
-
-input.customField {
-    background-color: lightgrey;
-    padding: 2px;
-}
-
-
-/* locate image near the bottom right of the browser window */
-
-#imageBR1 {
-    bottom: 60%;
-    right: 50%;
-    border: 0px;
-}
-
-#imageBR2 {
-    bottom: 60%;
-    right: 700%;
-    border: 0px;
-}
-
-#imageBR3 {
-    bottom: 60%;
-    right: 50%;
-    border: 0px;
-}
-
-#menu {
-    padding: 8px;
-    border: lightgrey dashed 2px;
-    font-family: monospace;
-    font-size: large;
-}
-
-.testButton {
-    margin-bottom: 1.5%;
-    color: rgb(255, 255, 255);
-}
+  .progressDonut::after{
+    content: '';
+    width: 300px;
+    height: 300px;
+    border:50px solid;
+    border-color: rgba(0,0,0,0.15) rgba(0,0,0,0.15) var(--colourBG) var(--colourBG);
+    position: absolute;
+    border-radius: 50%;
+    left: 0;
+    top: 0;
+    box-sizing: border-box;
+    transform: rotate( calc( 1deg * ( -45 + var(--percentage) * 1.8 ) ) );
+    animation: fillAnimation 1s ease-in;
+  }
